--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,14 +7,19 @@ font-family: 'Titillium Web', sans-serif; */
 
 body {
     font-family:'Quicksand', sans-serif;
+    color: grey;
+    background-color: #EDECED;
     
 }
 
 header {
-    background-color: black;
+    background-color: #676767;
 }
 
-header .grid-layout { 
+
+
+/* Classes genéricas */
+.grid-layout { 
     width: 80%;
     margin: 0 auto;
     /* background-color: yellowgreen */
@@ -55,4 +60,40 @@ header nav a {
     text-decoration: none;
 }
 
+/* Main */
+main {
+    padding-top: 20px;
+}
 
+main #lapis {
+    width: 100%;
+}
+
+main .colunas-flex {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+main .coluna1 {
+    width: 75%;
+    background-color: white;
+}
+
+/* Aside */
+main .coluna2 {
+    width: 23%;
+}
+
+/* Articles */
+main .coluna2 article {
+    margin-bottom: 20px;
+    background-color: white;
+}
+
+/* Reset de propriedades */
+* {
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+}
